--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,26 +1,3 @@
-/*
-=====================================================================
-*   Ceevee v1.0 Default Stylesheet
-*   url: styleshout.com
-*   03-17-2014
-=====================================================================
-
-TOC:
-a. Webfonts and Icon fonts
-b. Reset
-c. Default Styles
-   1. Basic
-   2. Typography
-   3. Links
-   4. Images
-   5. Buttons
-   6. Forms
-d. Grid
-e. Others
-   1. Clearing
-   2. Misc
-
-=====================================================================  */
 
 /* ------------------------------------------------------------------ */
 /* a. Webfonts and Icon fonts
@@ -33,8 +10,7 @@ e. Others
 /* ------------------------------------------------------------------
 /* b. Reset
       Adapted from:
-      Normalize.css - https://github.com/necolas/normalize.css/
-      HTML5 Doctor Reset - html5doctor.com/html-5-reset-stylesheet/
+  
 /* ------------------------------------------------------------------ */
 
 html, body, div, span, object, iframe,
@@ -87,7 +63,7 @@ pre {
    word-wrap: break-word;
 }
 
-blockquote, q { quotes: &#8220 &#8220; }
+blockquote, q { quotes: #8220 #8220; }
 
 blockquote:before, blockquote:after,
 q:before, q:after {
@@ -448,10 +424,10 @@ dd { margin: 0 0 0 20px; }
 
 /*  5. Images  --------------------------------------------------------- */
 
-img {
+/* img {
    max-width: 100%;
    height: auto;
-}
+} */
 img.pull-right { margin: 12px 0px 0px 18px; }
 img.pull-left { margin: 12px 18px 0px 0px; }
 
@@ -492,7 +468,7 @@ button:hover,
 input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover {
-   background: #3d4145;
+   background: #87b3df;
    color: #fff;
 }
 
